# python-aco

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
aco/: README.md  aco.ipynb  ant.py  common_aco.py  main.py  paco.py  tau_matrix.py  tsp_parser.py
src/: my_ant.py  tsp_parser.py
tests/unit/: conftest.py  test_common_aco.py  test_paco.py
tsp_problems/: ulysses16.tsp
vis/: ErrorVis.py  Path2dVis.py  ScatterVisualizer.py  visualization.py
